refs #945 feat: show deactivated account message on login
